Lab3/roscourse_ws/log/build_2024-02-16_11-33-17/python_turtle/stderr.log
Sorry: TabError: inconsistent use of tabs and spaces in indentation (turtlebot_server.py, line 14)
  File "/home/yahboom/S24_RobotProgramming_eloquent/Lab3/roscourse_ws/install/python_turtle/lib/python3.8/site-packages/python_turtle/service_client.py", line 14
    self.color_cli = self.create_client(<SetColor>, <set-Color>)
                                        ^
SyntaxError: invalid syntax

